<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#FFD700"
    tools:context=".MainActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/welcome_name"
        android:gravity="center"
        android:layout_weight="1"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:layout_weight="1"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/current_mode_name" />

        <Spinner
            android:id="@+id/spinner_mode"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:entries="@array/mode_name" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="2"
        android:layout_marginTop="10dp">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:src="@drawable/player"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:src="@drawable/player_2"
            android:layout_marginStart="85dp"/>
    </LinearLayout>

    <com.example.myapplication.ChessBoardActivity
        android:id="@+id/view_five_chess_board"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_weight="7" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="2"
        android:gravity="center"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/btn_begin"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:text="@string/btn_begin_name"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/btn_prompt"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:text="@string/btn_prompt_name"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/btn_repent"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:text="@string/btn_repent_name"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/btn_help"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:text="@string/btn_help_name"
            android:layout_weight="1"/>
    </LinearLayout>

</LinearLayout>
